--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -237,6 +237,16 @@ Emacs can have tabs! [[https://github.com/manateelazycat/awesome-tab][awesome ta
 )
 #+end_src
 
+** diff-hl
+
+#+begin_src emacs-lisp
+(use-package diff-hl
+ :straight (diff-hl :type git
+               :host github
+               :repo "dgutov/diff-hl")
+ :config (global-diff-hl-mode))
+#+end_src
+
 * projectile
 
 [[https://github.com/bbatsov/projectile][projectile]] is a project interaction library for emacs.
