Resolve silly project error

--- a/emacs-nougat/nougat/packages/projectile/discover-projects.org
+++ b/emacs-nougat/nougat/packages/projectile/discover-projects.org
@@ -1,4 +1,4 @@
-* discover projects
+* COMMENT discover projects
 Look for project directories here by default.
 ** projectile-project-directory
 #+begin_src emacs-lisp
