--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -255,10 +255,10 @@ Emacs can have tabs! [[https://github.com/manateelazycat/awesome-tab][awesome ta
 
 Override default project directory path.
 #+begin_src emacs-lisp
-  (setq projectile-project-search-path '((expand-file-name "~/Projects/")
-                                         (expand-file-name "~/Notebook")
-                                         (expand-file-name "~/lab-notebook")
-                                         (expand-file-name (concat user-emacs-directory "emacs-nougat"))))
+  (setq projectile-project-search-path (list (expand-file-name "~/Projects/")
+                                              (expand-file-name "~/Notebook")
+                                              (expand-file-name "~/lab-notebook")
+                                              (expand-file-name (concat user-emacs-directory "emacs-nougat"))))
   ;;(setq projectile-project-directory (expand-file-name "~/Projects/"))
 #+end_src
 
