Update with missing parens; expand magit commit history to ~25

--- a/emacs-nougat/nougat/packages/magit/setup.org
+++ b/emacs-nougat/nougat/packages/magit/setup.org
@@ -5,7 +5,10 @@
  :straight (magit :type git
                :host github
                :repo "magit/magit")
- :bind(("C-x g" . magit-status)))
+ :bind(("C-x g" . magit-status))
+ :config (setq magit-log-section-commit-count 25)
+)
+
 #+END_SRC
 
 * COMMENT ghub
