--- a/emacs-nougat/nougat/packages/helm/extras/helm-company.org
+++ b/emacs-nougat/nougat/packages/helm/extras/helm-company.org
@@ -1,6 +1,5 @@
-* COMMENT helm-company
+* helm-company
 #+begin_src emacs-lisp
   (use-package helm-company
-    :bind (("C-:" . helm-company)))
+    :bind (("C-\"" . helm-company)))
 #+end_src
-
