Add keybindings for helm-projectile

--- a/emacs-nougat/nougat/packages/helm/extras/helm-projectile.org
+++ b/emacs-nougat/nougat/packages/helm/extras/helm-projectile.org
@@ -1,5 +1,7 @@
 * helm-projectile
 #+begin_src emacs-lisp
-  (use-package helm-projectile)
+  (use-package helm-projectile
+   :bind (("C-c p w" . helm-projectile-switch-project)
+          ("C-c p G" . helm-projectile-grep)))
 #+end_src
 
