--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -370,6 +370,7 @@ normal bindings.
 ** lisp
 #+INCLUDE: "../nougat/support/lisp/lispy-mode.org"
 ** python
+*** black
 #+CAPTION: blacken lets you auto-blackify your python code
 #+begin_src emacs-lisp
 ;;https://github.com/pythonic-emacs/blacken
@@ -381,7 +382,7 @@ normal bindings.
 ;; (setq blacken-allow-py36 t)
 #+end_src
 
-
+*** COMMENT poetry
 #+CAPTION: poetry https://github.com/galaunay/poetry.el
 #+begin_src emacs-lisp
 (use-package pyvenv
@@ -398,7 +399,9 @@ normal bindings.
 )
 #+end_src
 
+*** Jedi
 #+INCLUDE: "../nougat/support/python/jedi.org"
+*** elpy
 #+INCLUDE: "../nougat/support/python/elpy.org"
 ** markdown
 #+INCLUDE: "../nougat/support/markdown/markdown-mode.org"
