Comment out erroneous undo-tree config

--- a/emacs-nougat/nougat/emacs/undo-tree.org
+++ b/emacs-nougat/nougat/emacs/undo-tree.org
@@ -19,11 +19,11 @@ Full documentation can be found [[http://www.dr-qubit.org/undo-tree/undo-tree.tx
 
 #+begin_src emacs-lisp
 (use-package undo-tree
-:config (undo-tree-visualizer-diff t))
+;;:config (undo-tree-visualizer-diff t)
+)
 #+end_src
 
 Make undo-tree the default for all modes
 #+begin_src emacs-lisp
 (global-undo-tree-mode)
-
 #+end_src
