--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -266,6 +266,19 @@ Sometimes it's handy to go back exactly a tab width.
 
 #+end_src
 
+** webpaste
+
+#+begin_src emacs-lisp
+(use-package webpaste
+  :bind (("C-c C-p C-b" . webpaste-paste-buffer)
+         ("C-c C-p C-r" . webpaste-paste-region))
+  :config
+  (progn
+    (setq webpaste-provider-priority '("ix.io" "dpaste.org")))
+    (setq webpaste-paste-confirmation t)
+)
+#+end_src
+
 
 * projectile
 
