--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -127,9 +127,12 @@ same as in the user's shell.
 
 #+begin_src emacs-lisp
   (use-package exec-path-from-shell
-    :config
-    (when (memq window-system '(mac ns ox))
-      (exec-path-from-shell-initialize)))
+  :config
+   (exec-path-from-shell-initialize)
+)
+;;    :config
+;;    (when (memq window-system '(mac ns ox))
+;;      (exec-path-from-shell-initialize)))
 #+end_src
 
 ** COMMENT sr-speedbar
@@ -278,6 +281,43 @@ Sometimes it's handy to go back exactly a tab width.
     (setq webpaste-paste-confirmation t)
 )
 #+end_src
+
+** window-hydra
+From [[https://github.com/dsedivec/dot-emacs-d/blob/master/lisp/window-hydra.el][here]]
+#+begin_src emacs-lisp
+(use-package windmove)
+(use-package ace-window)
+
+(require 'windmove)
+(require 'ace-window)
+
+;;;###autoload (autoload 'window-hydra/body "window-hydra" nil t)
+(defhydra window-hydra (:hint nil)
+  "
+  ^_j_^                  _1_ single window   _2_^ split window      _b_alance windows
+_h_   _l_  move buffer   _o_ther window      _\\_ transpose frame   s_w_ap window
+  ^_k_^                  _←_ winner-undo     _0_^ delete window     _→_ winner redo
+"
+  ("j" (aw-swap-window (windmove-find-other-window 'up)))
+  ("h" (aw-swap-window (windmove-find-other-window 'left)))
+  ("l" (aw-swap-window (windmove-find-other-window 'right)))
+  ("k" (aw-swap-window (windmove-find-other-window 'down)))
+  ("1" delete-other-windows)
+  ("2" split-window-below)
+  ("b" balance-windows)
+  ("o" ace-window)
+  ("\\" transpose-frame)
+  ("w" ace-swap-window)
+  ("<left>" winner-undo)
+  ("0" delete-window)
+  ("<right>" winner-redo)
+  ("q" nil))
+
+(provide 'window-hydra)
+
+(global-set-key (kbd "C--") 'window-hydra/body)
+#+end_src
+
 
 * projectile
 
