--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -294,16 +294,16 @@ From [[https://github.com/dsedivec/dot-emacs-d/blob/master/lisp/window-hydra.el]
 ;;;###autoload (autoload 'window-hydra/body "window-hydra" nil t)
 (defhydra window-hydra (:hint nil)
   "
-  ^_j_^                  _1_ single window   _2_^ split window      _b_alance windows
-_h_   _l_  move buffer   _o_ther window      _\\_ transpose frame   s_w_ap window
+  ^_i_^                  _1_ single window   _3_^ split window      _b_alance windows
+_j_   _l_  move buffer   _o_ther window      _\\_ transpose frame   s_w_ap window
   ^_k_^                  _←_ winner-undo     _0_^ delete window     _→_ winner redo
 "
-  ("j" (aw-swap-window (windmove-find-other-window 'up)))
-  ("h" (aw-swap-window (windmove-find-other-window 'left)))
+  ("i" (aw-swap-window (windmove-find-other-window 'up)))
+  ("j" (aw-swap-window (windmove-find-other-window 'left)))
   ("l" (aw-swap-window (windmove-find-other-window 'right)))
   ("k" (aw-swap-window (windmove-find-other-window 'down)))
   ("1" delete-other-windows)
-  ("2" split-window-below)
+  ("3" split-window-right)
   ("b" balance-windows)
   ("o" ace-window)
   ("\\" transpose-frame)
@@ -315,9 +315,8 @@ _h_   _l_  move buffer   _o_ther window      _\\_ transpose frame   s_w_ap windo
 
 (provide 'window-hydra)
 
-(global-set-key (kbd "C--") 'window-hydra/body)
+(global-set-key (kbd "C-M-_") 'window-hydra/body)
 #+end_src
-
 
 * projectile
 
