--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -270,7 +270,6 @@ Sometimes it's handy to go back exactly a tab width.
 #+end_src
 
 ** webpaste
-
 #+begin_src emacs-lisp
 (use-package webpaste
   :bind (("C-c C-p C-b" . webpaste-paste-buffer)
@@ -280,42 +279,6 @@ Sometimes it's handy to go back exactly a tab width.
     (setq webpaste-provider-priority '("ix.io" "dpaste.org")))
     (setq webpaste-paste-confirmation t)
 )
-#+end_src
-
-** window-hydra
-From [[https://github.com/dsedivec/dot-emacs-d/blob/master/lisp/window-hydra.el][here]]
-#+begin_src emacs-lisp
-(use-package windmove)
-(use-package ace-window)
-
-(require 'windmove)
-(require 'ace-window)
-
-;;;###autoload (autoload 'window-hydra/body "window-hydra" nil t)
-(defhydra window-hydra (:hint nil)
-  "
-  ^_i_^                  _1_ single window   _3_^ split window      _b_alance windows
-_j_   _l_  move buffer   _o_ther window      _\\_ transpose frame   s_w_ap window
-  ^_k_^                  _←_ winner-undo     _0_^ delete window     _→_ winner redo
-"
-  ("i" (aw-swap-window (windmove-find-other-window 'up)))
-  ("j" (aw-swap-window (windmove-find-other-window 'left)))
-  ("l" (aw-swap-window (windmove-find-other-window 'right)))
-  ("k" (aw-swap-window (windmove-find-other-window 'down)))
-  ("1" delete-other-windows)
-  ("3" split-window-right)
-  ("b" balance-windows)
-  ("o" ace-window)
-  ("\\" transpose-frame)
-  ("w" ace-swap-window)
-  ("<left>" winner-undo)
-  ("0" delete-window)
-  ("<right>" winner-redo)
-  ("q" nil))
-
-(provide 'window-hydra)
-
-(global-set-key (kbd "C-M-_") 'window-hydra/body)
 #+end_src
 
 * projectile
@@ -461,8 +424,45 @@ normal bindings.
 ** direnv
 #+INCLUDE: "../nougat/support/direnv/direnv.org"
 
-* COMMENT hydra
+* hydra
 #+INCLUDE: "../nougat/packages/hydra/setup.org"
+** window-hydra
+From [[https://github.com/dsedivec/dot-emacs-d/blob/master/lisp/window-hydra.el][here]]
+#+begin_src emacs-lisp
+(use-package windmove)
+(use-package ace-window)
+
+(require 'windmove)
+(require 'ace-window)
+
+;;;###autoload (autoload 'window-hydra/body "window-hydra" nil t)
+(defhydra window-hydra (:hint nil)
+  "
+  ^_i_^                  _1_ single window   _3_^ split window      _b_alance windows
+_j_   _l_  move buffer   _o_ther window      _\\_ transpose frame   s_w_ap window
+  ^_k_^                  _←_ winner-undo     _0_^ delete window     _→_ winner redo
+"
+  ("i" (aw-swap-window (windmove-find-other-window 'up)))
+  ("j" (aw-swap-window (windmove-find-other-window 'left)))
+  ("l" (aw-swap-window (windmove-find-other-window 'right)))
+  ("k" (aw-swap-window (windmove-find-other-window 'down)))
+  ("1" delete-other-windows)
+  ("3" split-window-right)
+  ("b" balance-windows)
+  ("o" ace-window)
+  ("\\" transpose-frame)
+  ("w" ace-swap-window)
+  ("<left>" winner-undo)
+  ("0" delete-window)
+  ("<right>" winner-redo)
+  ("q" nil))
+
+(provide 'window-hydra)
+
+(global-set-key (kbd "C-M-_") 'window-hydra/body)
+#+end_src
+
+** COMMENT Other hydras
 #+INCLUDE: "../nougat/packages/hydra/extras/hydra-hera.org"
 #+INCLUDE: "../nougat/packages/hydra/extras/hydra-bookmarks.org"
 #+INCLUDE: "../nougat/packages/hydra/extras/hydra-elisp.org"
