Rearrange configurations into base

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -81,10 +81,6 @@ Set up some variables pointing to where normal lab notebook things live.
     (concat my/template-directory file-name))
 #+end_src
 
-* COMMENT package management
-[[https://github.com/raxod502/straight.el][Straight.el]] is a next-generation, purely functional package manager for the Emacs hacker.
-#+INCLUDE: "../nougat/package-management/straight.org::bootstrap straight" :minlevel 2
-#+INCLUDE: "../nougat/package-management/straight.org::use-package integration" :minlevel 2
 * themes
 Emacs has many themes that it can use.
 ** solarized-theme
@@ -303,7 +299,6 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/projectile/discover-projects.org"
 * org-mode customizations
 [[https://orgmode.org][org]] is life.
-##+INCLUDE: "../nougat/packages/org-mode/setup.org::setup"
 #+INCLUDE: "../nougat/packages/org-mode/setup.org::look"
 #+INCLUDE: "../nougat/packages/org-mode/setup.org::feel"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-babel.org::add languages to babel"
@@ -427,7 +422,7 @@ normal bindings.
 ** direnv
 #+INCLUDE: "../nougat/support/direnv/direnv.org"
 
-* hydra
+* hydras
 #+INCLUDE: "../nougat/packages/hydra/setup.org"
 ** window-hydra
 From [[https://github.com/dsedivec/dot-emacs-d/blob/master/lisp/window-hydra.el][here]]
