--- a/emacs-nougat/user-outlines/base.org
+++ b/emacs-nougat/user-outlines/base.org
@@ -9,5 +9,12 @@ These components *must* be present; everything else is user-specific.
 hacker.
 #+INCLUDE: "../nougat/package-management/straight.org::bootstrap straight" :minlevel 2
 #+INCLUDE: "../nougat/package-management/straight.org::configure use-package integration" :minlevel 2
+** Disable other config files
+Since all the configuration should live in this version-controlled file, discard any
+customizations made inside Emacs.
+#+BEGIN_SRC emacs-lisp
+  (setq custom-file (make-temp-file ""))
+#+END_SRC
+
 * org-mode
 #+INCLUDE: "../nougat/packages/org-mode/setup.org::setup"
