--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -419,7 +419,7 @@ normal bindings.
 #+INCLUDE: "../nougat/support/markdown/markdown-mode.org"
 ** docker
 #+INCLUDE: "../nougat/support/docker/dockerfile-mode.org"
-** direnv
+** COMMENT direnv
 #+INCLUDE: "../nougat/support/direnv/direnv.org"
 
 * hydras
