Update helm-projectile keybind

--- a/emacs-nougat/nougat/packages/helm/extras/helm-projectile.org
+++ b/emacs-nougat/nougat/packages/helm/extras/helm-projectile.org
@@ -2,6 +2,8 @@
 #+begin_src emacs-lisp
   (use-package helm-projectile
    :bind (("C-c p w" . helm-projectile-switch-project)
-          ("C-c p G" . helm-projectile-grep)))
+          ("C-c p G" . helm-projectile-grep)
+          ("C-c p f" . helm-projectile-find-file-dwim)
+))
 #+end_src
 
