--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -375,6 +375,34 @@ normal bindings.
 * pandoc mode
 #+INCLUDE: "../nougat/packages/pandoc-mode/pandoc-mode.org"
 * language support
+** lsp-mode
+LSP is the language server protocol
+
+#+begin_src emacs-lisp
+(use-package lsp-mode
+  ;; set prefix for lsp-command-keymap (few alternatives - "C-l", "C-c l")
+  :init (setq lsp-keymap-prefix "s-l")
+  :hook (;; replace XXX-mode with concrete major-mode(e. g. python-mode)
+         (python-mode . lsp-deferred)
+         ;; if you want which-key integration
+         (lsp-mode . lsp-enable-which-key-integration))
+  :commands (lsp lsp-deferred))
+
+;; optionally
+(use-package lsp-ui :commands lsp-ui-mode)
+(use-package company-lsp :commands company-lsp)
+;; if you are helm user
+(use-package helm-lsp :commands helm-lsp-workspace-symbol)
+;; if you are ivy user
+;;(use-package lsp-ivy :commands lsp-ivy-workspace-symbol)
+(use-package lsp-treemacs :commands lsp-treemacs-errors-list)
+
+;; optionally if you want to use debugger
+(use-package dap-mode)
+;; (use-package dap-LANGUAGE) to load the dap adapter for your language
+
+#+end_src
+
 ** COMMENT CSV
 #+INCLUDE: "../nougat/packages/csv-mode/csv-mode.org"
 ** LaTeX
@@ -411,9 +439,9 @@ normal bindings.
 )
 #+end_src
 
-*** Jedi
+*** COMMENT Jedi
 #+INCLUDE: "../nougat/support/python/jedi.org"
-*** elpy
+*** COMMENT elpy
 #+INCLUDE: "../nougat/support/python/elpy.org"
 ** markdown
 #+INCLUDE: "../nougat/support/markdown/markdown-mode.org"
