--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-hera.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-hera.org
@@ -25,7 +25,7 @@ one. Any hydra is of course free to show the default hydra if wanted.
       (when context (funcall context))))
 
   ;; bind hera-run
-  (global-set-key (kbd "<f19>") 'hera-run)
+  (global-set-key (kbd "C-M-|") 'hera-run)
   (global-set-key (kbd "C-<f19>") hera-default-hydra)
 #+end_src
 
