--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -91,13 +91,13 @@ though, so we'll pick another.
 (use-package solarized-theme
     :config
     (when (display-graphic-p)
-         (load-theme 'solarized-wombat-dark t)
-         (enable-theme 'solarized-wombat-dark))
+         (load-theme 'solarized-gruvbox-dark t)
+         (disable-theme 'leuven)
+         (enable-theme 'solarized-gruvbox-dark))
 )
 (unless (display-graphic-p)
     (load-theme 'leuven t)
-)
-
+    )
 #+end_src
 
 * emacs
@@ -452,6 +452,9 @@ LSP is the language server protocol
 
 * hydras
 #+INCLUDE: "../nougat/packages/hydra/setup.org"
+#+INCLUDE: "../nougat/packages/hydra/extras/hydra-hera.org"
+#+INCLUDE: "../nougat/packages/hydra/extras/hydra-org.org"
+#+INCLUDE: "../nougat/packages/hydra/extras/hydra-projectile.org"
 ** window-hydra
 From [[https://github.com/dsedivec/dot-emacs-d/blob/master/lisp/window-hydra.el][here]]
 #+begin_src emacs-lisp
@@ -489,14 +492,14 @@ _j_   _l_  move buffer   _o_ther window      _\\_ transpose frame   s_w_ap windo
 #+end_src
 
 ** COMMENT Other hydras
-#+INCLUDE: "../nougat/packages/hydra/extras/hydra-hera.org"
+
 #+INCLUDE: "../nougat/packages/hydra/extras/hydra-bookmarks.org"
 #+INCLUDE: "../nougat/packages/hydra/extras/hydra-elisp.org"
 #+INCLUDE: "../nougat/packages/hydra/extras/hydra-helm.org"
 #+INCLUDE: "../nougat/packages/hydra/extras/hydra-help.org"
 #+INCLUDE: "../nougat/packages/hydra/extras/hydra-mark.org"
-#+INCLUDE: "../nougat/packages/hydra/extras/hydra-org.org"
-#+INCLUDE: "../nougat/packages/hydra/extras/hydra-projectile.org"
+
+
 #+INCLUDE: "../nougat/packages/hydra/extras/hydra-python.org"
 #+INCLUDE: "../nougat/packages/hydra/extras/hydra-register.org"
 #+INCLUDE: "../nougat/packages/hydra/extras/hydra-window.org"
