Reorder paste priority

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -275,7 +275,7 @@ Sometimes it's handy to go back exactly a tab width.
          ("C-c C-p C-r" . webpaste-paste-region))
   :config
   (progn
-    (setq webpaste-provider-priority '("ix.io" "dpaste.org")))
+    (setq webpaste-provider-priority '("dpaste.org" "dpaste.com")))
     (setq webpaste-paste-confirmation t)
 )
 #+end_src
