Add flycheck support for shellcheck

--- a/emacs-nougat/nougat/emacs/flycheck.org
+++ b/emacs-nougat/nougat/emacs/flycheck.org
@@ -44,3 +44,9 @@ replacement for the older Flymake extension which is part of GNU Emacs.
 :config (require 'writegood-mode))
 (global-set-key "\C-cg" 'writegood-mode)
 #+end_src
+
+** shell-check
+
+#+begin_src emacs-lisp
+(add-hook 'sh-mode-hook 'flycheck-mode)
+#+end_src
