Add org-store-link keybind

--- a/emacs-nougat/nougat/packages/org-mode/setup.org
+++ b/emacs-nougat/nougat/packages/org-mode/setup.org
@@ -40,7 +40,9 @@ Getting org to play with straight.el is a little fussy.
     :bind (:map org-mode-map
                 ("M-n" . outline-next-visible-heading)
                 ("M-p" . outline-previous-visible-heading)
-                ("M-RET" . org-insert-heading))
+                ("M-RET" . org-insert-heading)
+                ("C-c l" . org-store-link)
+)
     :config
     ;; This forces straight to load the package immediately in an attempt to avoid the
     ;; Org that ships with Emacs.
