Add todo hilighting

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -280,6 +280,22 @@ Sometimes it's handy to go back exactly a tab width.
 )
 #+end_src
 
+** hl-todo
+
+#+begin_src emacs-lisp
+(use-package hl-todo
+ :straight (hl-todo :type git
+               :host github
+               :repo "tarsius/hl-todo")
+ :config
+       (setq global-hl-todo-mode t)
+       (setq hl-todo-keyword-faces
+             '(("todo"   . "#FF0000")
+               ("fixme"  . "#FF0000"))
+       )
+)
+#+end_src
+
 * projectile
 
 [[https://github.com/bbatsov/projectile][projectile]] is a project interaction library for emacs.
