--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-org.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-org.org
@@ -56,7 +56,7 @@
    ^^^^^^^^^^^^^^                                          Level
    ^^^^^^^^^                                       [_1_ _2_ _3_ _4_ _5_]             _<f19>_ to close
    ^^^^^^^^^^^^^^^^^^^^──────────────────────────────────────────────────────────────────────────────"
-     ("<f19>" (funcall hera-default-hydra) nil :color blue)
+     ("<XF86Launch9>" (funcall hera-default-hydra) nil :color blue)
      ;; shift
      ("h" org-promote-subtree)
      ("l" org-demote-subtree)
