--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -201,7 +201,7 @@ Line numbers are good.
 (global-display-line-numbers-mode)
 #+end_src
 
-** dashboard
+** COMMENT dashboard
 [[https://github.com/emacs-dashboard/emacs-dashboard][dashboard]] is a pretty cute splash screen mode for emacs that's a nice way to jump
 between projects.
 #+begin_src emacs-lisp
@@ -294,6 +294,20 @@ Sometimes it's handy to go back exactly a tab width.
                ("fixme"  . "#FF0000"))
        )
 )
+#+end_src
+
+** COMMENT centered-cursor
+From [[https://two-wrongs.com/centered-cursor-mode-in-vanilla-emacs][centered-cursor in vanilla emacs]], ape centered cursor mode with some speedups
+#+begin_src emacs-lisp
+(setq scroll-preserve-screen-position t
+      scroll-conservatively 0
+      maximum-scroll-margin 0.5
+      scroll-margin 99999)
+#+end_src
+
+** Hilight row
+#+begin_src emacs-lisp
+(setq global-hl-line-mode t)
 #+end_src
 
 * projectile
