--- a/emacs-nougat/nougat/packages/org-mode/extras/org-capture.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-capture.org
@@ -19,7 +19,11 @@
 #+begin_src emacs-lisp
   (setq org-capture-templates
         '(
-          ("w" "Work")
+          ("n" "Neurala" entry
+(file+headline org-default-notes-file "Neurala")
+"* %T %?\n %i" :empty-lines 1)
+          ("q" "Quote")
+          ("p" "Poem")
          )
   )
 #+end_src
