--- a/emacs-nougat/nougat/packages/org-mode/extras/org-projectile.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-projectile.org
@@ -1,4 +1,4 @@
-* COMMENT org-projectile
+* org-projectile
 [[https://github.com/IvanMalison/org-projectile][org-projectile]] provides functions for the creation of org-mode TODOs that are
 associated with projectile projects.
 
