--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -280,6 +280,17 @@ Sometimes it's handy to go back exactly a tab width.
 )
 #+end_src
 
+** dired-peek
+
+#+begin_src emacs-lisp
+;;preview files in dired
+(use-package peep-dired
+  :ensure t
+  :defer t ; don't access `dired-mode-map' until `peep-dired' is loaded
+  :bind (:map dired-mode-map
+              ("P" . peep-dired)))
+#+end_src
+
 ** hl-todo
 
 #+begin_src emacs-lisp
