--- a/emacs-nougat/nougat/packages/org-mode/setup.org
+++ b/emacs-nougat/nougat/packages/org-mode/setup.org
@@ -42,7 +42,7 @@ Getting org to play with straight.el is a little fussy.
                 ("M-p" . outline-previous-visible-heading)
                 ("M-RET" . org-insert-heading)
                 ("C-c l" . org-store-link)
-)
+                )
     :config
     ;; This forces straight to load the package immediately in an attempt to avoid the
     ;; Org that ships with Emacs.
@@ -53,8 +53,9 @@ Getting org to play with straight.el is a little fussy.
     ;; Enable org capture
     (require 'org-capture)
 
-    ;; Enable templates like <s
-    (require 'org-tempo))
+    ;; Enable template expansion
+    (require 'org-tempo)
+    )
 #+end_src
 
 ** look
