--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -122,16 +122,14 @@ Configuration related core editor functions are here.
 
 ** exec-path from shell
 [[https://github.com/purcell/exec-path-from-shell][This]] is a GNU Emacs library to ensure environment variables inside Emacs look the
-same as in the user's shell.
+same as in the user's shell.  This is useful when, like me, you don't really make an
+effort to keep =$PATH= manipulation out of your =.zshrc=.
 
 #+begin_src emacs-lisp
   (use-package exec-path-from-shell
   :config
    (exec-path-from-shell-initialize)
 )
-;;    :config
-;;    (when (memq window-system '(mac ns ox))
-;;      (exec-path-from-shell-initialize)))
 #+end_src
 
 ** COMMENT sr-speedbar
@@ -143,7 +141,7 @@ same as in the user's shell.
 #+end_src
 
 ** COMMENT buffer-move
-#+CAPTION: Move buffers around more easily 
+#+CAPTION: Move buffers around more easily
 #+begin_src emacs-lisp
   (use-package buffer-move
   :straight(buffer-move
@@ -227,7 +225,7 @@ between projects.
       (setq dashboard-set-footer nil))
 #+end_src
 
-** awesome-tabs
+** COMMENT awesome-tabs
 Emacs can have tabs! [[https://github.com/manateelazycat/awesome-tab][awesome tab]] provides them.
 #+begin_src emacs-lisp
 (use-package awesome-tab
@@ -240,7 +238,7 @@ Emacs can have tabs! [[https://github.com/manateelazycat/awesome-tab][awesome ta
 #+end_src
 
 ** diff-hl
-
+diff-hl is a "git gutter": it hilights changed lines on the left hand side of a buffer.
 #+begin_src emacs-lisp
 (use-package diff-hl
  :straight (diff-hl :type git
@@ -280,7 +278,7 @@ Sometimes it's handy to go back exactly a tab width.
 )
 #+end_src
 
-** dired-peek
+** COMMENT dired-peek
 
 #+begin_src emacs-lisp
 ;;preview files in dired
@@ -292,7 +290,7 @@ Sometimes it's handy to go back exactly a tab width.
 #+end_src
 
 ** hl-todo
-
+nominally hilight lines that have todo : in them
 #+begin_src emacs-lisp
 (use-package hl-todo
  :straight (hl-todo :type git
@@ -342,14 +340,17 @@ Override default project directory path.
 [[https://orgmode.org][org]] is life.
 #+INCLUDE: "../nougat/packages/org-mode/setup.org::look"
 #+INCLUDE: "../nougat/packages/org-mode/setup.org::feel"
+
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-babel.org::add languages to babel"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-babel.org::set default header args"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-babel.org::disable code evaluation prompts"
-#+INCLUDE: "../nougat/packages/org-mode/extras/org-capture.org"
+
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-tidy.org"
-#+INCLUDE: "../nougat/packages/org-mode/extras/nested-narrowing.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/dynamic-tag-position.org"
+#+INCLUDE: "../nougat/packages/org-mode/extras/nested-narrowing.org"
+
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-export.org"
+#+INCLUDE: "../nougat/packages/org-mode/extras/org-capture.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/htmlize.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/toc-org.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-jira.org"
@@ -358,6 +359,7 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-avy.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-projectile.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-roam.org"
+#+INCLUDE: "../nougat/packages/org-mode/extras/org-download.org"
 
 * helm
 #+INCLUDE: "../nougat/packages/helm/setup.org"
@@ -394,7 +396,7 @@ for quickly applying export settings, annotating code blocks, and the like.
 ** github
 *** gist
 #+INCLUDE: "../nougat/packages/github/gist.org"
-* multiple-cursors
+* COMMENT multiple-cursors
 #+INCLUDE: "../nougat/packages/multiple-cursors/multiple-cursors.org"
 * phi-search
 This is an incremental search which works with multiple cursors and replaces the
@@ -462,24 +464,27 @@ LSP is the language server protocol
 ;; (setq blacken-allow-py36 t)
 #+end_src
 
-*** COMMENT poetry
-#+CAPTION: poetry https://github.com/galaunay/poetry.el
+*** pyvenv
 #+begin_src emacs-lisp
 (use-package pyvenv
  :straight (pyvenv :type git
                :host github
                :repo "jorgenschaefer/pyvenv")
 )
+#+end_src
 
+*** poetry
+#+CAPTION: poetry https://github.com/galaunay/poetry.el
+#+begin_src emacs-lisp
 (use-package poetry
 :straight (poetry :type git
                   :host github
                   :repo "galaunay/poetry.el")
-:config (poetry-tracking-mode)
+;; :config (poetry-tracking-mode)
 )
 #+end_src
 
-*** COMMENT Jedi
+*** COMMENT jedi
 #+INCLUDE: "../nougat/support/python/jedi.org"
 *** COMMENT elpy
 #+INCLUDE: "../nougat/support/python/elpy.org"
@@ -487,7 +492,7 @@ LSP is the language server protocol
 #+INCLUDE: "../nougat/support/markdown/markdown-mode.org"
 ** docker
 #+INCLUDE: "../nougat/support/docker/dockerfile-mode.org"
-** COMMENT direnv
+** direnv
 #+INCLUDE: "../nougat/support/direnv/direnv.org"
 
 * hydras
