--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -196,7 +196,9 @@ deal when editing files with potentially many editors at once.
 ** display line numbers
 Line numbers are good.
 #+begin_src emacs-lisp
-(global-display-line-numbers-mode)
+  (global-display-line-numbers-mode)
+;;  (setq display-line-numbers 'relative)
+  (setq display-line-numbers-width 4)
 #+end_src
 
 ** COMMENT dashboard
