Correctly call hl-todo-mode function

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -299,7 +299,7 @@ nominally hilight lines that have todo : in them
                :host github
                :repo "tarsius/hl-todo")
  :config
-       (setq global-hl-todo-mode t)
+       (global-hl-todo-mode)
        (setq hl-todo-keyword-faces
              '(("todo"   . "#FF0000")
                ("fixme"  . "#FF0000"))
