Add row hilighting and mouse size adjustment

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -316,7 +316,20 @@ From [[https://two-wrongs.com/centered-cursor-mode-in-vanilla-emacs][centered-cu
       scroll-margin 99999)
 #+end_src
 
-** Hilight row
+** Highlight row
+#+begin_src emacs-lisp
+;;(setq global-hl-line-mode t)
+(global-hl-line-mode)
+(set-face-background 'hl-line "gray22")
+#+end_src
+
+** control font size with mouse
+#+begin_src emacs-lisp
+  (global-set-key (kbd "<C-mouse-4>") 'text-scale-increase)
+  (global-set-key (kbd "<C-mouse-5>") 'text-scale-decrease)
+#+end_src
+
+
 #+begin_src emacs-lisp
 (setq global-hl-line-mode t)
 #+end_src
