Simplify theme loading

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -88,16 +88,22 @@ Solarized is a nice theme.  Easy on the eyes.  Looks like garbage in some termin
 though, so we'll pick another.
 
 #+begin_src emacs-lisp
-(use-package solarized-theme
-    :config
-    (when (display-graphic-p)
-         (load-theme 'solarized-gruvbox-dark t)
-         (disable-theme 'leuven)
-         (enable-theme 'solarized-gruvbox-dark))
-)
-(unless (display-graphic-p)
-    (load-theme 'leuven t)
-    )
+  ;; (use-package solarized-theme
+  ;;     :config
+  ;;     (when (display-graphic-p)
+  ;;          (load-theme 'solarized-gruvbox-dark t)
+  ;;          (disable-theme 'leuven)
+  ;;          (enable-theme 'solarized-gruvbox-dark))
+  ;; )
+  ;; (unless (display-graphic-p)
+  ;;     (load-theme 'solarizized-gruvbox-dark t)
+  ;;     (enable-theme 'solarizized-gruvbox-dark)
+  ;;     )
+  (use-package solarized-theme
+      :config
+      ((load-theme 'solarized-gruvbox-dark t)
+       (enable-theme 'solarized-gruvbox-dark))
+  )
 #+end_src
 
 * emacs
