--- a/emacs-nougat/nougat/packages/magit/setup.org
+++ b/emacs-nougat/nougat/packages/magit/setup.org
@@ -18,6 +18,7 @@ Forge interfaces with github and gitlab
  :straight (forge :type git
                :host github
                :repo "magit/forge")
+:after magit
 )
 #+end_src
 
