--- a/emacs-nougat/nougat/packages/magit/setup.org
+++ b/emacs-nougat/nougat/packages/magit/setup.org
@@ -11,7 +11,26 @@
 
 #+END_SRC
 
-* forge
+* COMMENT ghub
+
+#+begin_src emacs-lisp
+(use-package ghub
+ :straight (ghub :type git
+               :host github
+               :repo "magit/ghub")
+)
+#+end_src
+
+* COMMENT transient
+#+begin_src emacs-lisp
+(use-package transient
+ :straight (transient :type git
+               :host github
+               :repo "magit/transient")
+)
+#+end_src
+
+* COMMENT forge
 Forge interfaces with github and gitlab
 #+begin_src emacs-lisp
 (use-package forge
