update todo hilighting

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -287,7 +287,6 @@ Sometimes it's handy to go back exactly a tab width.
 #+end_src
 
 ** COMMENT dired-peek
-
 #+begin_src emacs-lisp
 ;;preview files in dired
 (use-package peep-dired
@@ -298,7 +297,7 @@ Sometimes it's handy to go back exactly a tab width.
 #+end_src
 
 ** hl-todo
-nominally hilight lines that have todo : in them
+nominally hilight lines that have todo in them
 #+begin_src emacs-lisp
 (use-package hl-todo
  :straight (hl-todo :type git
@@ -307,8 +306,8 @@ nominally hilight lines that have todo : in them
  :config
        (global-hl-todo-mode)
        (setq hl-todo-keyword-faces
-             '(("todo"   . "#FF0000")
-               ("fixme"  . "#FF0000"))
+             '(("todo: "   . "#FF0000")
+               ("fixme: "  . "#FF0000"))
        )
 )
 #+end_src
