--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -322,13 +322,15 @@ From [[https://two-wrongs.com/centered-cursor-mode-in-vanilla-emacs][centered-cu
 #+end_src
 
 ** Highlight row
+Hilight the row the mark is on.
 #+begin_src emacs-lisp
-;;(setq global-hl-line-mode t)
 (global-hl-line-mode)
 (set-face-background 'hl-line "gray22")
 #+end_src
 
 ** control font size with mouse
+This is a complete hack, because these don't affect all faces properly, but it's
+better than nothing.
 #+begin_src emacs-lisp
   (global-set-key (kbd "<C-mouse-4>") 'text-scale-increase)
   (global-set-key (kbd "<C-mouse-5>") 'text-scale-decrease)
