Add powerline bar

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -347,6 +347,17 @@ Manage pinboard pins with [[https://github.com/davep/pinboard.el][pinboard.el]].
        )
 #+end_src
 
+** powerline
+Add fancy modeline, because why not.
+#+begin_src emacs-lisp
+  (use-package powerline
+   :straight (powerline :type git
+                 :host github
+                 :repo "milkypostman/powerline")
+   :config (powerline-default-theme)
+   )
+#+end_src
+
 * projectile
 
 [[https://github.com/bbatsov/projectile][projectile]] is a project interaction library for emacs.
