--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -399,6 +399,16 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-projectile.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-roam.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-download.org"
+** org-jira
+
+#+begin_src emacs-lisp
+(use-package org-jira
+ :straight (org-jira :type git
+               :host github
+               :repo "ahungry/org-jira")
+ :config (setq jiralib-url "https://neurala.atlassian.net")
+     )
+#+end_src
 
 * helm
 #+INCLUDE: "../nougat/packages/helm/setup.org"
