Improve json mode bindings

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -445,7 +445,7 @@ for quickly applying export settings, annotating code blocks, and the like.
 ** github
 *** gist
 #+INCLUDE: "../nougat/packages/github/gist.org"
-* COMMENT multiple-cursors
+* multiple-cursors
 #+INCLUDE: "../nougat/packages/multiple-cursors/multiple-cursors.org"
 * phi-search
 This is an incremental search which works with multiple cursors and replaces the
@@ -539,6 +539,17 @@ LSP is the language server protocol
 #+INCLUDE: "../nougat/support/python/elpy.org"
 ** markdown
 #+INCLUDE: "../nougat/support/markdown/markdown-mode.org"
+** json
+
+#+begin_src emacs-lisp
+  (use-package json-mode
+    :straight (json-mode :type git
+                         :host github
+                         :repo "joshwnj/json-mode")
+    :bind ("C-c C-f" . json-pretty-print-buffer)
+    )
+#+end_src
+
 ** docker
 #+INCLUDE: "../nougat/support/docker/dockerfile-mode.org"
 ** direnv
