shut up exec-path-from-shell's bitching

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -132,10 +132,11 @@ same as in the user's shell.  This is useful when, like me, you don't really mak
 effort to keep =$PATH= manipulation out of your =.zshrc=.
 
 #+begin_src emacs-lisp
-  (use-package exec-path-from-shell
-  :config
-   (exec-path-from-shell-initialize)
-)
+    (use-package exec-path-from-shell
+    :init
+    (setq exec-path-from-shell-check-startup-files nil)
+    :config (exec-path-from-shell-initialize)
+  )
 #+end_src
 
 ** COMMENT sr-speedbar
