Override old, busted json formatter.

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -547,7 +547,7 @@ LSP is the language server protocol
     :straight (json-mode :type git
                          :host github
                          :repo "joshwnj/json-mode")
-    :bind ("C-c C-f" . json-pretty-print-buffer)
+    :bind-keymap ("C-c C-f" . json-pretty-print-buffer)
     )
 #+end_src
 
