Resolve stupid keymissing error

--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-org.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-org.org
@@ -54,7 +54,7 @@
     ^ ^  ^↓^  ^ ^   ^↓^       ^↓^     ^↓^      ^↓^      [_d_] Children
     ^ ^  _J_  ^ ^   _n_       _j_     _e_      _i_      [_f_] Parents
    ^^^^^^^^^^^^^^                                          Level
-   ^^^^^^^^^                                       [_1_ _2_ _3_ _4_ _5_]             _<f18>_ to close
+   ^^^^^^^^^                                       [_1_ _2_ _3_ _4_ _5_]             _<XF86Launch9>_ to close
    ^^^^^^^^^^^^^^^^^^^^──────────────────────────────────────────────────────────────────────────────"
      ("<XF86Launch9>" (funcall hera-default-hydra) nil :color blue)
      ;; shift
