--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -84,25 +84,23 @@ Set up some variables pointing to where normal lab notebook things live.
 * themes
 Emacs has many themes that it can use.
 ** solarized-theme
-Solarized is a nice theme.  Easy on the eyes.  Looks like garbage in some terminals,
-though, so we'll pick another.
+Solarized is a nice theme.  Easy on the eyes.  The problem with themes is that I like
+to use emacsclient as ~exec emacsclient -c -a="" "$@" & > /dev/null~, but if you do
+this, the theme comes out all weird the first time because emacs doesn't know if it
+has a GUI or not, so it reverts to a halfassed guess of what terminal colors it might
+have available to it.
 
+The solution is to delay theme load for a few seconds until the GUI comes up and then
+it works fine. [[https://old.reddit.com/r/emacs/comments/3a5kim/emacsclient_does_not_respect_themefont_setting/cs9roe4/][this]] reddit post lead to [[https://github.com/kaushalmodi/.emacs.d/blob/f3c44e933f45dfdb760540e9f86acc91b55ab94a/init.el#L293-L304][this]] solution.
 #+begin_src emacs-lisp
-  ;; (use-package solarized-theme
-  ;;     :config
-  ;;     (when (display-graphic-p)
-  ;;          (load-theme 'solarized-gruvbox-dark t)
-  ;;          (disable-theme 'leuven)
-  ;;          (enable-theme 'solarized-gruvbox-dark))
-  ;; )
-  ;; (unless (display-graphic-p)
-  ;;     (load-theme 'solarizized-gruvbox-dark t)
-  ;;     (enable-theme 'solarizized-gruvbox-dark)
-  ;;     )
   (use-package solarized-theme
-      :config
-      ((load-theme 'solarized-gruvbox-dark t)
-       (enable-theme 'solarized-gruvbox-dark))
+
+   :straight (solarized-theme :type git
+                              :host github
+                              :repo "bbatsov/solarized-emacs")
+   :config
+   (load-theme 'solarized-wombat-dark t)
+   :defer 2
   )
 #+end_src
 
