--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -100,7 +100,7 @@ it works fine. [[https://old.reddit.com/r/emacs/comments/3a5kim/emacsclient_does
                               :repo "bbatsov/solarized-emacs")
    :config
    (load-theme 'solarized-wombat-dark t)
-   :defer 2
+   :defer 1
   )
 #+end_src
 
@@ -355,6 +355,22 @@ Add fancy modeline, because why not.
                  :repo "milkypostman/powerline")
    :config (powerline-default-theme)
    )
+#+end_src
+
+** hippie-expand
+
+#+begin_src emacs-lisp
+
+          (global-set-key (kbd "M-/") 'hippie-expand)
+          (setq hippie-expand-try-functions-list
+                        '(try-expand-dabbrev
+                        try-expand-dabbrev-all-buffers
+                        try-expand-dabbrev-from-kill
+                        try-complete-file-name-partially
+                        try-complete-file-name try-expand-all-abbrevs
+                        try-expand-list try-expand-line
+                        try-complete-lisp-symbol-partially
+                        try-complete-lisp-symbol))
 #+end_src
 
 * projectile
